layout-engine/test-easy-mode.txt
> stjs@1.0.0 test /u/stjs
> mocha */test/test-*.js "-g" "easy mode"

file:///Users/gvwilson/stjs/layout-engine/micro-css-ruleset.js:3
import { IdRule, ClassRule, TagRule } from './micro-css.js'
         ^^^^^^
SyntaxError: The requested module './micro-css.js' does not provide an export named 'IdRule'
    at ModuleJob._instantiate (internal/modules/esm/module_job.js:98:21)
    at async ModuleJob.run (internal/modules/esm/module_job.js:143:5)
    at async Loader.import (internal/modules/esm/loader.js:165:24)
    at async Object.exports.loadFilesAsync (/Users/gvwilson/stjs/node_modules/mocha/lib/esm-utils.js:33:20)
    at async singleRun (/Users/gvwilson/stjs/node_modules/mocha/lib/cli/run-helpers.js:156:3)
    at async Object.exports.handler (/Users/gvwilson/stjs/node_modules/mocha/lib/cli/run.js:366:5)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! stjs@1.0.0 test: `mocha */test/test-*.js "-g" "easy mode"`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the stjs@1.0.0 test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /Users/gvwilson/.npm/_logs/2020-11-24T13_03_58_171Z-debug.log
